--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,53 @@
-node_modules
-node_modules
+# Node modules
+node_modules/
+
+# Expo specific
+.expo/
+.expo-shared/
+
+# Metro / bundler
+dist/
+web-build/
+.expo-dev/
+
+# Build outputs
+android/app/build/
+ios/build/
+ios/Pods/
+
+# IDE stuff
+.vscode/
+.idea/
+*.swp
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+expo-error.log
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Generated files
+*.keystore
+*.jks
+*.p12
+*.mobileprovision
+
+# Fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+
+
+ios
+android
